--- a/_config.yml
+++ b/_config.yml
@@ -2,10 +2,10 @@
 # Site settings
 # -----------------------------------------------------------------------------
 
-title: blank # the website title (if blank, full name will be used instead)
-first_name: aiaudit.org
+title: aiaudit.org # the website title (if blank, full name will be used instead)
+first_name: aiaudit
 middle_name:
-last_name: 
+last_name: .org
 email: info@aiaudit.org
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
 # A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
