contributor collection, modified projects

--- a/_config.yml
+++ b/_config.yml
@@ -87,6 +87,9 @@ collections:
   projects:
     output: true
     permalink: /projects/:path/
+  contributors:
+    output: true
+    permalink: /contributors/:path/
 
 news_limit: 5
 
