--- a/_config.yml
+++ b/_config.yml
@@ -15,8 +15,9 @@ footer_text: >
 #  Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
 #  Photos from <a href="https://unsplash.com" target="_blank">Unsplash</a>.
 
-url:  # the base hostname & protocol for your site
-baseurl: # the subpath of your site, e.g. /blog/
+url:  https://aiaudit.org # the base hostname & protocol for your site
+baseurl: "" # the subpath of your site, e.g. /blog/
+repository: aiaudit-org/website
 last_updated: false # set to true if you want to display last updated in the footer
 
 # -----------------------------------------------------------------------------
