--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ footer_text: >
 
 url:  https://aiaudit.org # the base hostname & protocol for your site
 baseurl: "" # the subpath of your site, e.g. /blog/
-repository: aiaudit-org/website
+repository: ""#aiaudit-org/website
 last_updated: false # set to true if you want to display last updated in the footer
 
 # -----------------------------------------------------------------------------
