--- a/_config.yml
+++ b/_config.yml
@@ -16,8 +16,8 @@ footer_text: >
 #  Photos from <a href="https://unsplash.com" target="_blank">Unsplash</a>.
 
 url:  https://aiaudit.org # the base hostname & protocol for your site
-baseurl: "" # the subpath of your site, e.g. /blog/
-repository: ""#aiaudit-org/website
+baseurl: "/website/" # the subpath of your site, e.g. /blog/
+repository: "" #aiaudit-org/website
 last_updated: false # set to true if you want to display last updated in the footer
 
 # -----------------------------------------------------------------------------
