--- a/_config.yml
+++ b/_config.yml
@@ -91,6 +91,9 @@ collections:
   contributors:
     output: true
     permalink: /contributors/:path/
+  coreprojects:
+    output: true
+    permalink: /coreprojects/:path/
 
 news_limit: 5
 
