--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,11 @@
 # -----------------------------------------------------------------------------
 
 title: DMLR # the website title (if blank, full name will be used instead)
-first_name: Data-centric Machine Learning Research (DMLR)
+first_name: DMLR
 middle_name:
-last_name: &nbsp ICML 2023 Workshop
+last_name: @ICML'23
 email: contact@dmlr.org
-description: > # the ">" symbol means to ignore newlines until "footer_text:"
+description: Data-centric Machine Learning Research (DMLR) Workshop at ICML 2023 # the ">" symbol means to ignore newlines until "footer_text:"
 # A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
 footer_text: >
   Thanks to <a href="https://github.com/alshedivat/al-folio">Maruan</a> for the neat theme base
