--- a/_config.yml
+++ b/_config.yml
@@ -127,7 +127,7 @@ plugins:
   - jekyll/scholar
   - jekyll-twitter-plugin
   - jemoji
-  - jekyll-gist
+  # - jekyll-gist
   # - bootstrap
   # - material-sass
 
