--- a/_config.yml
+++ b/_config.yml
@@ -45,7 +45,7 @@ og_image: # The site-wide (default for all links) Open Graph preview image
 
 discord_id: https://discord.gg/FswYXMv4j9
 github_username: datacentric-machine-learning-research # your GitHub user name
-twitter_username: dmlr # your Twitter handle
+twitter_username: #dmlr # your Twitter handle
 linkedin_username: # your LinkedIn user name
 scholar_userid: # your Google Scholar ID
 orcid_id: # your ORCID ID
